feat(backend): finalize lecture content and sections