@@ -4,7 +4,6 @@ import com.gulnara.internship.dto.SectionDto;
 import com.gulnara.internship.model.Section;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Mapper for converting Section entities to SectionDto.
@@ -14,20 +13,27 @@ public final class SectionMapper {
     private SectionMapper() {
         // Utility class, no instances allowed
     }
-
     public static SectionDto toDto(Section section) {
-        if (section == null) {
-            return null;
+        if (section == null) return null;
+
+        String lectureTitle = null;
+        String lectureContent = null;
+
+        if (section.getLectureContent() != null) {
+            lectureTitle = section.getLectureContent().getTitle();
+            lectureContent = section.getLectureContent().getContent();
         }
+
         return new SectionDto(
                 section.getId(),
                 section.getTitle(),
-                section.getContent());
+                lectureTitle,
+                lectureContent
+        );
     }
-
     public static List<SectionDto> toDtoList(List<Section> sections) {
         return sections.stream()
                 .map(SectionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
